# drifter

./: README.md  pyproject.toml
.drifter/: users.json  users_schema_history.json
examples/: register_example.py
src/drifter/: __init__.py  core.py  polars.py  schema.py
tests/: __init__.py  test_polars.py  test_registration.py  test_schema.py  test_schema_registration.py  test_schema_tracking.py
